fixing colors and layout bugs

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
   --color-vibrant-border1: hsl(0 0% 0% / 0.6);
   --color-scroll-fg: hsl(0 0% 20%);
   --color-scroll-bg: hsl(0 0% 90%);
-  --type-min-width: 10ch;
+  --type-min-width: 9ch;
   scrollbar-color: var(--color-scroll-fg) var(--color-scroll-bg);
   overflow-y: scroll;
 }
@@ -35,7 +35,7 @@
   --color-fg2: hsl(220 20% 80%);
   --color-fg3: hsl(220 20% 70%);
   --color-fg4: hsl(220 20% 60%);
-  --color-pokeball: hsl(350 70% 40%);
+  --color-pokeball: hsl(357 70% 40%);
   --color-button1: hsl(220 20% 28%);
   --color-button1b: hsl(220 20% 24%);
   --color-button-hover1: hsl(220 20% 32%);
@@ -47,22 +47,9 @@
   --color-border2: hsl(220 20% 35%);
   --color-border3: hsl(220 20% 30%);
   --color-vibrant-border: hsl(0 0% 100% / 0.2);
-  --color-vibrant-border1: hsl(0 0% 100% / 0.6);
+  --color-vibrant-border1: hsl(0 0% 100% / 0.8);
   --color-scroll-fg: hsl(220 20% 80%);
   --color-scroll-bg: hsl(220 20% 30%);
-}
-
-:root[lang="pt-BR"],
-:root[lang="ja"],
-:root[lang="kk"],
-:root[lang="it"],
-:root[lang="da"] {
-  --type-min-width: 10ch;
-}
-
-:root[lang="ru"],
-:root[lang="pl"] {
-  --type-min-width: 11ch;
 }
 
 [hidden] {
@@ -210,14 +197,17 @@
 .MatchupsSection-Container {
   display: grid;
   gap: 0.25rem;
-  grid-template-columns: repeat(auto-fill, minmax(var(--type-min-width), 1fr));
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(calc(var(--type-min-width) + 16px), 1fr)
+  );
 }
 
 .MultiTypeSelector-Container,
 .TypeSelector-Container {
   grid-template-columns: repeat(
     auto-fill,
-    minmax(calc(var(--type-min-width) + 1.5rem), 1fr)
+    minmax(calc(var(--type-min-width) + 2.5rem + 2px), 1fr)
   );
 }
 
